# DREAMteam

./: .gitignore  .pre-commit-config.yaml  README.md  chatbot_test.py  last_teams.json  main.py  pyproject.toml
api/: app.py  app2.py  app_v3.py  dreamteam
api/data/: project_benchmarks.py
api/models/: chatbot.py
api/services/: auth_service.py  chatbot.py  database.py  project_service.py  team_performance_simulator.py  team_performance_simulator_openai.py  team_recommendation_service.py
api/static/: style_chat.css  style_dashboard.css  style_generator.css  style_login.css  style_reports.css
api/templates/: login.html
api/templates/candidate/: chat.html
api/templates/recruiter/: dashboard.html  generator.html  reports.html
scripts/: hash_generator.py  run_simulation_openai.py  run_team_simulation.py  test_chatbot.py
tests/: test_dashboard_teams.py  test_database_connection.py  test_endpoints.py  test_logout.py  test_team_performance_simulator.py
ui/static/: style_chat.css  style_dashboard.css  style_generator.css  style_login.css  style_reports.css
ui/templates/: login.html
ui/templates/candidate/: chat.html
ui/templates/recruiter/: dashboard.html  generator.html  reports.html
